@@ -21,12 +21,12 @@
     NSDictionary *dict = [NSDictionary dictionaryWithObjectsAndKeys:
 //        @"0xffffffff", 		@"WebKitLogLevel",
         @"0x0", 		@"WebKitLogLevel",
-        @"ComicSansMS", 	@"WebKitStandardFont",
-        @"ComicSansMS",  		@"WebKitFixedFont",
-        @"ComicSansMS", 	@"WebKitSerifFont",
-        @"ComicSansMS", 		@"WebKitSansSerifFont", 
-        @"ComicSansMS", 	@"WebKitCursiveFont",
-        @"ComicSansMS", 	@"WebKitFantasyFont",
+        @"Times-Roman", 	@"WebKitStandardFont",
+        @"Courier",  		@"WebKitFixedFont",
+        @"Times-Roman", 	@"WebKitSerifFont",
+        @"Arial", 		@"WebKitSansSerifFont",
+        @"Times-Roman", 	@"WebKitCursiveFont",
+        @"Times-Roman", 	@"WebKitFantasyFont",
         @"6", 			@"WebKitMinimumFontSize",
         fontSizeArray,		@"WebKitFontSizes",
         pluginsEnabled,		@"WebKitPluginsEnabled",
